Fix: Index page overflow issue

--- a/src/pages/blog/blog.styl
+++ b/src/pages/blog/blog.styl
@@ -2,6 +2,10 @@
 @import "../../stylesheets/nav"
 @import "../../stylesheets/footer"
 
+body
+	display: flex
+	flex-direction: column
+
 main
 	width: 95%
 	margin: 0 auto
