--- a/src/stylesheets/base.styl
+++ b/src/stylesheets/base.styl
@@ -20,6 +20,3 @@ body, html, :root
 	-webkit-font-smoothing: antialiased
 	-moz-osx-font-smoothing: grayscale
 	-webkit-overflow-scrolling: touch
-
-	display: flex
-	flex-direction: column
